# StratifyOS

./: .clang-format  .cproject  .gitignore  .project  .tags  CHANGES.md  CMakeLists.txt  LICENSE.md  README.md  Spaces.toml  StratifyLiblink.pro  StratifyOS.cmake  StratifyOS_crt.cmake  arm.cmake  bootstrap.cmake  create-gcc-hard.cmake  doxyfile  link.cmake  spaces_deps.toml  toolchain.md
doc/: layout.xml
src/: BUCK  CMakeLists.txt  config.h  library.bzl  sos_config_template.h
src/auth/: BUCK  CMakeLists.txt  auth_pure_code.c
src/boot/: BUCK  CMakeLists.txt  boot_config.h  boot_debug.c  boot_interrupt_handlers.c  boot_link.c  boot_link.h  boot_link_transport_usb.c  boot_main.c  boot_stratify_link_transport_usb.c  link_local.h  link_transport_usb.h  stratify_link_boot_transport_usb_common.c  stratify_link_transport_usb_common.c  stratify_link_transport_usb_common.h  stratify_link_transport_usb_common_dual_vcp.c
src/cortex_m/: cortexm.c  cortexm_local.h  fault.c  mpu.c  task.c  task_flags.h  task_local.h  task_mpu.c  task_process.c  task_single.c
src/cortexm/: BUCK  CMakeLists.txt  auth.c  cortexm.c  cortexm_local.h  devfs.c  fault.c  fault_handler.c  fault_local.h  mpu.c  task.c  task_local.h  task_mpu.c  task_process.c  util.c
src/crt/: BUCK  CMakeLists.txt  crt.c  crt_common.c  crt_common.h  crt_symbols.S  operator.cpp
src/device/: BUCK  CMakeLists.txt  auth_flash.c  cfifo.c  dev_ffifo.c  devfifo.c  device_fifo.c  drive_cfi.c  drive_cfi_local.h  drive_cfi_qspi.c  drive_cfi_spi.c  drive_device.c  drive_mmc.c  drive_mmc_dma.c  drive_ram.c  drive_sdio.c  drive_sdio_dma.c  drive_sdspi.c  drive_sdspi_dma.c  drive_sdspi_local.h  drive_sdssp.c  ffifo.c  fifo.c  full.c  i2s_ffifo.c  i2s_spi_ffifo.c  led.c  led_pio.c  led_pwm.c  mcfifo.c  null.c  random.c  reset_tmr.c  sd_crc.c  sd_spi.c  sd_spi_local.h  sd_ssp.c  sdspi.c  sdspi_local.h  sdssp.c  (+8 more)
src/device/microchip/: enc28j60.c  sst25vf.c  sst25vf_local.h  sst25vf_share.c  sst25vf_ssp.c  sst25vf_ssp_tmr.c  sst25vf_tmr.c
src/device/spansion/: s29gl.c
src/device/sys/: devfifo.c  ffifo.c  fifo.c  full.c  led.c  null.c  random.c  sd_crc.c  sdspi.c  sdspi_local.h  sdssp.c  uartfifo.c  urandom.c  usbfifo.c  vcp_stdout.c  zero.c
src/device/tty/: tty_uart.c  tty_usbbulk.c
src/link/: BUCK  CMakeLists.txt  Link.h  Link_cpp.cpp  hwdl_link.c  link.c  link_bootloader.c  link_debug.c  link_dir.c  link_file.c  link_flags.h  link_local.h  link_phy.c  link_posix_trace.c  link_process.c  link_protocol_master.c  link_stdio.c  link_sys_attr.c  link_time.c
src/link_common/: CMakeLists.txt  link_transport.c
src/link_transport/: BUCK  CMakeLists.txt  link1_transport.c  link1_transport_master.c  link1_transport_slave.c  link2_transport.c  link2_transport_master.c  link2_transport_slave.c  link3_transport.c  link3_transport_master.c  link3_transport_slave.c  link_transport.c  link_transport_master.c  link_transport_slave.c
src/mcu/: BUCK  CMakeLists.txt  adc.c  core.c  dac.c  dac_dma.c  eeprom.c  eint.c  emc.c  enet.c  flash.c  i2c.c  i2s.c  i2s_spi.c  i2s_spi_dma.c  link_transport_slave.c  local.h  mci.c  mcu.c  mcu_debug.c  mcu_sync_io.c  mem.c  pio.c  pwm.c  qei.c  rtc.c  spi.c  spi_dma.c  ssp.c  sys.c  tmr.c  uart.c  usb.c  variant.h
src/mcu/cortex_m/: cortexm.c  fault.c  mpu.c  priv.c  task.c  task_flags.h  task_mpu.c  task_process.c  task_single.c
src/mcu/lpc/: adc_dev.c  core_dev.c  core_flags.h  core_initclock.c  core_local.h  core_set_pinsel_func.c  core_setusbclock.c  core_sleep.c  core_startup.c  crc_dev.c  dac_dev.c  dac_dma_dev.c  dma_dev.c  eeprom_dev.c  eint_dev.c  emc_dev.c  enet_dev.c  enet_local.h  fault_dev.c  flash_dev.c  i2c_dev.c  i2s_dev.c  lcd_dev.c  lpc_flash.c  lpc_flash_flags.h  mci_dev.c  mcu_dev.c  mem_dev.c  mpu_dev.c  pio_dev.c  pwm_dev.c  qei_dev.c  rtc_dev.c  spi_dev.c  spi_flags.h  ssp_dev.c  ssp_flags.h  tmr_dev.c  uart_dev.c  usb_dev.c  (+3 more)
src/mcu/lpc13uxx/: core_set_pinsel_func.c  core_startup.c  pio_dev.c  usb_dev.c  usb_flags.h
src/mcu/lpc13xx/: Makefile.am  adc_dev.c  core_dev.c  core_flags.h  core_set_clock.c  core_set_pinsel_func.c  core_set_usb_clock.c  core_sleep.c  core_startup.c  core_wdt.c  core_wdt_flags.h  core_wr_pinmode.c  eint_dev.c  fault_dev.c  flash_dev.c  gpio_flags.h  hwpl_dev.c  i2c_dev.c  mem_dev.c  mpu_dev.c  pio_dev.c  spi_dev.c  ssp_flags.h  tmr_dev.c  uart_dev.c  usb_dev.c  usb_flags.h
src/mcu/lpc8xx/: core_initclock.c  core_startup.c  pio_dev.c
src/mcu/share/: adc.c  core.c  dac.c  dac_dma.c  eeprom.c  eint.c  emc.c  enet.c  flash.c  gpio.c  i2c.c  i2s.c  link_transport_slave.c  local.h  lpc_flash.c  mci.c  mcu.c  mcu_check_adc_port.c  mcu_check_i2c_port.c  mcu_check_pwm_port.c  mcu_check_spi_port.c  mcu_check_ssp_port.c  mcu_check_uart_port.c  mcu_debug.c  mcu_sync_io.c  mem.c  pio.c  pwm.c  qei.c  rtc.c  spi.c  ssp.c  sys.c  tmr.c  tmr_simple.c  uart.c  usb.c  usb_dev.c  usb_dev_setup.c  usbd_control.c  (+2 more)
src/sys/: BUCK  CMakeLists.txt  assert_func.c  check_config.h  initial_thread.c  libgcc.c  libgcc.h  sos_debug.c  sos_default_thread.c  sos_interrupt_handlers.c  sos_led.c  sos_led_root.c  sos_main.c  stfy_led.c  stratify_default_thread.c  stratify_led.c  stratify_main.c  symbols.c  symbols.h  sys_23_dev.c  sys_26_dev.c  sys_dev.c
src/sys/aio/: aio.c
src/sys/auth/: auth_dev.c  auth_pure_code.c  device_aes_api.c  device_random_api.c  device_sha256_api.c  prng.h  random_root_api.c  tinycrypt_sha256.c  tinycrypt_sha256.h  tinycrypt_sha256_api.c
src/sys/crt/: crt_sys.c
src/sys/dirent/: dirent.c
src/sys/grp/: grp.c
src/sys/link/: link_thread.c  sos_link_transport_usb.c  sos_link_transport_usb_common.c  sos_link_transport_usb_descriptors.c  sos_link_transport_usb_dual_vcp.c  sos_link_transport_usb_dual_vcp_descriptors.c  sos_link_transport_usb_link_descriptors.c  sos_link_transport_usb_link_vcp_descriptors.c  (+2 more)
src/usbd/: BUCK  CMakeLists.txt  sos_link_transport_usb.c  sos_link_transport_usb_link_descriptors.c  sos_link_transport_usb_link_vcp_descriptors.c  sos_link_transport_usb_vcp_descriptors.c  usbd_control.c  usbd_local.h  usbd_standard.c  usbd_standard.h
(+819 files in other folders)
