bin_PROGRAMS = cafslitesim
CFLAGS = -I$(srcdir) -I$(top_srcdir)/../include -D__SIM__
cafslitesim_SOURCES = cafs_lite_block.c \
	cafs_lite_diag.c \
	cafs_lite_dir.c \
	cafs_lite_file.c \
	cafs_lite_filelist.c \
	cafs_lite_list.c \
	cafs_lite_scratch.c \
	cafs_lite_serialno.c \
	cafs_lite_tp.c \
	cafs_lite.c \
	main.c \
	test_dir.c \
	test_file.c \
	tests.c \
	sim_dev.c \
	sysfs.c
	
		
