#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([cafslitesim], [1.2.6], [contact@coactionos.com])
AM_INIT_AUTOMAKE([-Wall foreign])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_CONFIG_MACRO_DIR([m4])
AC_FUNC_MALLOC
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T
AC_OUTPUT
